--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,7 @@
 {
-  "short_name": "DeveloperFolio",
-  "name": "DeveloperFolio",
+  "short_name": "Devashri",
+  "name": "Devashri's Portfolio",
   "icons": [
-    {
-      "src": "/favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
     {
       "src": "/android-chrome-192x192.png?v8=qAJ44G5Bm7",
       "type": "image/png",
